--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">FirstApp</string>
-    <string name="btn">按钮</string>
+    <string name="app_name">你好</string>
+    <string name="btn">转换</string>
+    <string name="show">请输入：</string>
+    <string name="out">输出：</string>
 </resources>
