--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -4,4 +4,9 @@
     <string name="btn">转换</string>
     <string name="show">请输入：</string>
     <string name="out">输出：</string>
+    <string name="rmb_hint">请输入人民币</string>
+    <string name="btn_dollar">美元</string>
+    <string name="btn_euro">欧元</string>
+    <string name="btn_won">韩元</string>
+    <string name="btn_open">打开</string>
 </resources>
