--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="btn">Transform</string>
     <string name="show">Please input</string>
     <string name="out">outPut:</string>
+    <string name="btn_dollar">Dollar</string>
+    <string name="btn_euro">Euro</string>
+    <string name="btn_won">Won</string>
+    <string name="btn_open">Open</string>
+    <string name="rmb_hint">Input RMB</string>
 </resources>
