--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -8,5 +8,6 @@
     <string name="btn_dollar">美元</string>
     <string name="btn_euro">欧元</string>
     <string name="btn_won">韩元</string>
-    <string name="btn_open">打开</string>
+    <string name="btn_open">设置</string>
+    <string name="btn_save">保存</string>
 </resources>
