--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="btn_dollar">Dollar</string>
     <string name="btn_euro">Euro</string>
     <string name="btn_won">Won</string>
-    <string name="btn_open">Open</string>
+    <string name="btn_open">OpenConfig</string>
+    <string name="btn_save">Save</string>
     <string name="rmb_hint">Input RMB</string>
+    <string name="dollar_hint" translatable="false"></string>
+    <string name="euro_hint" translatable="false"></string>
+    <string name="won_hint"></string>
 </resources>
