--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -10,4 +10,5 @@
     <string name="btn_won">韩元</string>
     <string name="btn_open">设置</string>
     <string name="btn_save">保存</string>
+    <string name="label_open_list">打开列表</string>
 </resources>
